- User interface:
	* blindfold play (piece set)
	* Add SAA/CUA hotkeys for clipboard (Ctrl-Ins, Shift-Ins)
	* try for www-browser as generic web browser (thanks to Tiurgin)
	* replace " " in urls for the Windows "start" command by %20 (thanks to Tiurgin)
- Translations:
	* hungarian updated (thanks to Szőts Gábor)
	* swedish updated (thanks to Hans Eriksson)
	* added catalan translation (thanks to Natalia Pares Vives)
- Game merging : it is now possible to merge directly a game from one base to the current game in another base (see context menu in Game list window)
- Engines handling : 
	* renamed Phalanx-XII to phalanx-scid (as Phalanx is no longer maintained we need a way to differentiate them)
	* try to auto-configure engines (scidlet, toga and phalanx) (thanks to Israel Chauca)
- Game annotation : book to use is saved (defaults to same book as Book window)
- HTML export of games (HTML + Javascript) : improved output, better piece sets, no frames (thanks to Charly Founes) 
- Novag Citrine support : improved interface

[April 2009 ]

scid-3.7.3
-----------
Maintenance release of Scid 3.7.2 fixing a bug in search position

 =============================================================================
|                                                                             |
|                              scid-4.0                                       |
|                                                                             |
|                           [September 2009]                                  |
|                                                                             |
 =============================================================================
- Fixes :
---------
	* serious game play when use book is checked and book name is empty leads to crash (thanks to Benigno Hernández)
	* Check for engines allowed in eMail games caused an exception (noENG not set)
	* Internet play (FICS) : 
	  - the first offer not displayed on the graph